add robosense handler

--- a/config/robosense.yaml
+++ b/config/robosense.yaml
@@ -1,32 +1,31 @@
 common:
-    lid_topic:  "/livox/lidar"
-#    imu_topic:  "/livox/imu/async"
-    imu_topic:  "/livox/imu"
+    lid_topic:  "/rslidar_points"
+    imu_topic:  "/imu/data"
 
 preprocess:
-    lidar_type: 1               # Livox series LiDAR
-    feature_extract_en: false
-    scan_line: 6
+    lidar_type: 6                # Velodyne LiDAR
+    scan_line: 32
     blind: 2
+    feature_extract_en: false
 
 initialization:
-    cut_frame_num: 5             # must be positive integer, 1 means do not cut frame
-    orig_odom_freq: 10           # original Lidar frequency
-    mean_acc_norm: 9.805             # 1 for livox built-in IMU
-    online_refine_time: 20.0     # seconds
-    data_accum_length: 400
+    cut_frame: true # false: do not cut input pointcloud
+    cut_frame_num: 4 # must be positive integer
+    orig_odom_freq: 10
+    mean_acc_norm: 9.81 # 1: for livox built-in IMU
+    online_refine_time: 15.0
+    data_accum_length: 500
     Rot_LI_cov: [ 0.00005, 0.00005, 0.00005 ]
-    Trans_LI_cov: [ 0.00001, 0.00001, 0.00001 ]
+    Trans_LI_cov: [ 0.0001, 0.0001, 0.0001 ]
 
 mapping:
     filter_size_surf: 0.05
     filter_size_map: 0.15
-    gyr_cov: 50
-    acc_cov: 2
+    gyr_cov: 0.5
+    acc_cov: 0.5
     b_acc_cov: 0.0001
     b_gyr_cov: 0.0001
-    det_range: 450.0
-
+    det_range: 100.0
 
 publish:
     path_en:  true
