--- a/config/robosense.yaml
+++ b/config/robosense.yaml
@@ -3,14 +3,14 @@ common:
     imu_topic:  "/imu/data"
 
 preprocess:
-    lidar_type: 6                # Velodyne LiDAR
+    lidar_type: 6                # Robosense LiDAR
     scan_line: 32
     blind: 2
     feature_extract_en: false
 
 initialization:
     cut_frame: true # false: do not cut input pointcloud
-    cut_frame_num: 4 # must be positive integer
+    cut_frame_num: 3 # must be positive integer
     orig_odom_freq: 10
     mean_acc_norm: 9.81 # 1: for livox built-in IMU
     online_refine_time: 15.0
